--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Akami</string>
+
+    <!-- Expense -->
+    <string name="currency_aed">AED</string>
 </resources>
