Set the screen when there is not SMS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- Expense -->
     <string name="currency_aed">AED</string>
+    <string name="main_activity_no_sms">For now this app only works with ADCB. Sorry about the incovenience</string>
 </resources>
