--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- Expense -->
     <string name="currency_aed">AED</string>
     <string name="main_activity_no_sms">For now this app only works with ADCB. Sorry about the incovenience</string>
+    <string name="action_bar_show_monthly_graph">Show monthly graph</string>
 </resources>
